--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,54 @@
-/* ini file css */
+nav,
+article {
+  display: flex;
+}
+
+.navigation_logo {
+  width: 40px;
+  height: 40px;
+  margin-left: 30px;
+}
+
+.navigation_home {
+  margin-left: auto;
+  border-style: solid;
+  border-width: 2px 1px 2px 2px;
+  padding: 10px;
+  border-radius: 5px 0px 0px 5px;
+}
+
+.navigation_ourPackage {
+  border-style: solid;
+  border-width: 2px 2px;
+  padding: 10px;
+}
+
+.navigation_callUs {
+  border-style: solid;
+  border-width: 2px 2px 2px 1px;
+  padding: 10px;
+  border-radius: 0px 5px 5px 0px;
+}
+
+.section_text1 {
+  text-align: center;
+  margin: 40px;
+}
+
+.section_text2 {
+  text-align: center;
+  color: lightslategray;
+  margin: 45px;
+}
+
+.article_div1 {
+  border: 1px solid;
+  width: 100%;
+}
+
+.article_div2 {
+  border: 1px solid;
+  width: 100%;
+  height: 250px;
+  margin-left: 10px;
+}
